<resources>
    <string name="app_name">hamsv2</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="loading">Loading</string>
    <string name="verify_email">Verify Email</string>
    <string name="we_need_to_verify_your_email_before_we_proceed_to_the_next_step">We need to verify your email before we proceed to the next step.</string>
    <string name="verify">Verify</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="lrn">LRN</string>
    <string name="extension_name">Extension name</string>
    <string name="lastname">Lastname</string>
    <string name="middle_name">Middle name</string>
    <string name="firstname">Firstname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_gender">Select Gender</string>
    <string name="nationality">Nationality</string>
    <string name="new_address">New Address</string>
    <string name="your_address">Your address</string>
    <string name="add_address">Add Address</string>
    <string name="item_text">Item Text</string>
    <string name="add_contact">Add Contact</string>
    <string name="person_name">Person name</string>
    <string name="juan_dela_cruz">Juan Dela Cruz</string>
    <string name="_09886787478">09886787478</string>
    <string name="guardian">GUARDIAN</string>
    <string name="select_contact_type">Select Contact Type</string>
    <string name="save_contact">Save Contact</string>
    <string name="phone_number">Phone number</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="profile">Profile</string>
    <string name="enroll_now">Enroll now</string>
    <string name="class_title">Class title</string>
    <string name="preffered_distance_learning_modalities">Preffered Distance Learning Modalities</string>
    <string name="classes_title">Classes Title</string>
    <string name="matematics">Matematics</string>
    <string name="_2023_2024">2023-2024</string>
    <string name="semester_1">Semester 1</string>
    <string name="subjects">Subjects</string>
    <string name="modular_print">MODULAR (PRINT)</string>
    <string name="modular_digital">MODULAR (DIGITAL)</string>
    <string name="online">ONLINE</string>
    <string name="education_television">EDUCATION TELEVISION</string>
    <string name="radio_base_instruction">RADIO BASE INSTRUCTION</string>
    <string name="home_schooling">HOME SCHOOLING</string>
    <string name="blended">BLENDED</string>
    <string name="face_to_face">FACE TO FACE</string>
    <string name="mat001">MAT001</string>
    <string name="update_enrollment">Update Enrollment</string>
    <string name="test">test</string>
    <string name="teacher">TEACHER</string>
    <string name="_3rd">3rd</string>
    <string name="_4rth">4rth</string>
    <string name="permanent">PERMANENT</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="none">none</string>
    <string name="gender">Gender</string>
    <string name="edit">Edit</string>
    <string name="schedule">Schedule</string>
    <string name="_1st_grading">1st Grading</string>
    <string name="to_continue_with_gcash_payment">To continue with GCASH payment</string>
    <string name="to_continue_with_gcash_payment_open_your_gcash_app_scan_this_qr_code_and_upload_your_receipt">To continue with gcash payment,Open your GCASH APP, Scan this QR code and Upload Your Receipt.</string>
    <string name="upload_your_receipt">Upload Your Receipt</string>
</resources>