<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="20dp"
    tools:context=".views.auth.ForgotPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:src="@drawable/forgot"/>



    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutEmail"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/buttonResetPassword"
        android:text="@string/reset_password"
        android:layout_height="wrap_content"/>
</LinearLayout>