<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textPersonName"
            android:layout_width="150dp"

            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:ems="3"
            android:fontFamily="@font/poppins_medium"
            android:maxLength="20"
            android:singleLine="true"
            android:text="@string/juan_dela_cruz"
            android:textColor="#D5D1D1"
            android:textSize="14sp" />
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="1dp"
            android:layout_marginHorizontal="5dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/textContactNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:textSize="14sp"
            android:singleLine="true"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/_09886787478" />
    </LinearLayout>

    <TextView
        android:id="@+id/textContactType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/text_border"

        android:fontFamily="@font/poppins_medium"
        android:padding="5dp"
        android:text="@string/guardian"
        android:textColor="#EF5350"
        android:textSize="10sp" />
</LinearLayout>