<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.auth.registration.contacts.StudentContacts">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerviewContacts"/>
        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_add_circle_24"
            android:text="@string/add_contact"
            android:id="@+id/buttonAddContact"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"/>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_back_ios_24"
            android:text="@string/back"
            app:iconGravity="start"
            android:id="@+id/buttonback"
            android:layout_gravity="start"
            style="@style/Widget.Material3.Button.TextButton.Icon"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/baseline_arrow_forward_24"
            android:text="@string/next"
            app:iconGravity="end"
            android:id="@+id/buttonNext"
            android:layout_gravity="end"
            style="@style/Widget.Material3.Button.TextButton.Icon"/>
    </FrameLayout>
</LinearLayout>